--- a/main.html
+++ b/main.html
@@ -7,7 +7,11 @@
 </head>
 
 <body>
-	
+	<div class="holder">
+		<div id="box_1">1</div>
+		<div id="box_2">2</div>
+		<div id="box_3">3</div>
+	</div>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
